--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "expo": "^52.0.16",
+    "expo-device": "^7.0.1",
+    "expo-notifications": "~0.29.11",
+    "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.3",
-    "react-native-web": "~0.19.6"
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
